--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"cloudinary": "^1.25.2",
 		"connect-flash": "^0.1.1",
+		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"ejs-mate": "^3.0.0",
 		"express": "^4.17.1",
@@ -19,6 +21,8 @@
 		"joi": "^17.4.0",
 		"method-override": "^3.0.0",
 		"mongoose": "^5.12.7",
+		"multer": "^1.4.2",
+		"multer-storage-cloudinary": "^4.0.0",
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
 		"passport-local-mongoose": "^6.1.0"
