--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.17.1",
 		"express-mongo-sanitize": "^2.1.0",
 		"express-session": "^1.17.2",
+		"helmet": "^4.6.0",
 		"joi": "^17.4.0",
 		"method-override": "^3.0.0",
 		"mongoose": "^5.12.7",
