--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@mapbox/mapbox-sdk": "^0.13.0",
 		"cloudinary": "^1.25.2",
 		"connect-flash": "^0.1.1",
+		"connect-mongo": "^3.2.0",
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.6",
 		"ejs-mate": "^3.0.0",
