--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node app.js",
-		"dev-start": "nodemon app.js"
+		"dev": "nodemon app.js"
 	},
 	"keywords": [],
 	"author": "Mickel el Khoury",
